Wed Jul 26 21:59:33 2006  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (Net::HTTP#post, request_post, request): should
	  set Content-Type: x-www-form-urlencoded by default.

	* lib/net/http.rb (Net::HTTPHeader#content_type): should return
	  nil when there's no Content-Type.

	* lib/net/http.rb (Net::HTTPHeader#sub_type): should return nil
	  when there's no sub Content-Type (e.g. "Content-Type: text").

	* lib/net/http.rb (Net::HTTPHeader#type_params): wrongly failed
	  when there's no Content-Type.

Wed Jul 26 18:38:13 2006  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c (strscan_do_scan): always return nil if
	  p->curr exceeds string size.

Wed Jul 26 18:33:31 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (Init_eval): rename #invoke_method and
	  #invoke_functional_method to __send and __send! respectively.

	* eval.c (remove_method): prohibit removing __send and __send!.

	* eval.c (rb_undef): prohibit undef'ing  __send and __send!.

	* eval.c (rb_eval): prohibit redefining  __send and __send!.

	* lib/delegate.rb (Delegator): preserve __send.

Wed Jul 26 18:14:19 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pty/pty.c (getDevice): retry once after GC on failure.
	  [ruby-core:08282]

Wed Jul 26 17:43:20 2006  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c (strscan_do_scan):
	  StringScanner.new("").scan(//) should return "". [ruby-Bugs:4361]

Wed Jul 26 17:28:16 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): prepend ".." to %u for negative bignum,
	  but not "-".  fixed: [ruby-core:08167]

Wed Jul 26 16:39:07 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_scan): add string modification check.
	  [ruby-core:7216]

Wed Jul 26 16:06:03 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/cgi.rb (CGI::QueryExtension::read_multipart): check
	  multipart boundary end.  a patch from Fujioka <fuj at rabbix.jp>
	  [ruby-dev:28470]
