@@ -165,6 +165,10 @@ if test -z "$AR"; then
   AC_CHECK_PROGS(AR, aal, ar)
 fi
 
+AC_CHECK_TOOL(AS, as)
+ASFLAGS=$ASFLAGS
+AC_SUBST(ASFLAGS)
+
 case "$target_os" in
 cygwin*|mingw*)
     AC_CHECK_TOOL(NM, nm)
