@@ -1,3 +1,7 @@
+Wed Jul 26 22:20:59 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* configure.in: add support for as and ASFLAGS.  [ruby-dev:29138]
+
 Wed Jul 26 21:59:33 2006  Minero Aoki  <aamine@loveruby.net>
 
 	* lib/net/http.rb (Net::HTTP#post, request_post, request): should
